--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Colors</title>
