fixes small typo in text

--- a/colors.html
+++ b/colors.html
@@ -10,7 +10,7 @@
 <body>
     <div class="containers">
       <h1>What's your favorite color?</h1>
-      <p>Click a button to choose waht color you'd like this page to be:</p>
+      <p>Click a button to choose what color you'd like this page to be:</p>
       
       <button class="btn btn-success" id="green">Green</button>
       <button class="btn btn-warning" id="yellow">Yellow</button>
